--- a/css/styles.css
+++ b/css/styles.css
@@ -56,12 +56,13 @@ a {
 .hero-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.072;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
 .btn {
+  cursor: pointer;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -74,6 +75,7 @@ a {
 .btn:focus {
   background-color: #404bbf;
 }
+
 .advantages-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -91,9 +93,10 @@ a {
   background-color: #f4f4fd;
 }
 .team-title {
+  text-transform: capitalize;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
@@ -120,9 +123,10 @@ a {
   color: #434455;
 }
 .portfolio-title {
+  text-transform: capitalize;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.12;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
